--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -300,7 +300,7 @@
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto" style="color: black; font-style: italic; font-weight: bold;">
-              <span>Copyright &copy; MechanicOnWay 2021</span>
+              <span>Copyright &copy; PSL Mini 2021</span>
             </div>
           </div>
         </footer>
