--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -59,7 +59,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="AdminDashboard.html">
                 <div class="sidebar-brand-icon">
-                    <i class="fas fa-tools"></i>
+                    <i class="fas fa-volleyball-ball"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3" style="font-style: italic;">PSL Mini</sup></div>
             </a>
